--- a/templates/userguide.html
+++ b/templates/userguide.html
@@ -7,70 +7,154 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h3>User Guide</h3>
+        <h3 class="py-3" id="userguide-top">ReagenTree - User Guide</h3>
         <ol>
-          <li><a href="#reagentree-intro">Introduction</a></li>
+          <li>
+            <a href="#reagentree-intro">Introduction</a>
+          </li>
           <li>
             <a href="#user-account">User account</a>
             <ol>
-              <li><a href="#user-registration">Registration</a></li>
-              <li><a href="#user-login">Login</a></li>
-              <li><a href="#user-logout">Logout</a></li>
-              <li><a href="#">Account previleges</a></li>
+              <li>
+                <a href="#user-registration">Registration</a>
+              </li>
+              <li>
+                <a href="#user-login">Login</a>
+              </li>
+              <li>
+                <a href="#user-logout">Logout</a>
+              </li>
+              <li>
+                <a href="#account-previleges">Account previleges</a>
+              </li>
             </ol>
           </li>
           <li>
             Concept models
             <ol>
-              <li><a href="#">Item</a></li>
-              <li><a href="#">Reagent (in-house reagent)</a></li>
-              <li><a href="#">Stock</a></li>
+              <li>
+                <a href="#">Item</a>
+              </li>
+              <li>
+                <a href="#">Reagent (in-house reagent)</a>
+              </li>
+              <li>
+                <a href="#">Stock</a>
+              </li>
             </ol>
           </li>
           <li>
             Settings
             <ol>
-              <li><a href="#">Companies</a></li>
-              <li><a href="#">Categories</a></li>
-              <li><a href="#">Locations</a></li>
-              <li><a href="#">Other settings</a></li>
+              <li>
+                <a href="#">Companies</a>
+              </li>
+              <li>
+                <a href="#">Categories</a>
+              </li>
+              <li>
+                <a href="#">Locations</a>
+              </li>
+              <li>
+                <a href="#">Other settings</a>
+              </li>
             </ol>
           </li>
           <li>
-            How to 
+            How to
             <ol>
-              <li><a href="#">Companies</a></li>
+              <li>
+                <a href="#">Add a new supplier or manufacturer company</a>
+              </li>
             </ol>
           </li>
         </ol>
       </div>
     </div>
-    <div class="row pt-5">
+    <div class="row">
       <div class="col-md-12">
-        <h4 id="reagentree-intro">Introduction</h4>
+        <h4 class="pt-3" id="reagentree-intro">1. Introduction</h4>
         <p>
-          ReagenTree is a web application designed to manage laboratory reagents and stocks and keeps track of the reagent inventory, alerting the users when stocks are running low. 
+          ReagenTree is a web application designed to manage laboratory reagents and stocks and keeps track of the reagent inventory, alerting the users when stocks are running low.
           ReagenTree is webbrowser and operation system angnostic and mobile-friendly, meaning it can be accessed from any device with a web browser including mobile devices.
-          ReagenTree is powered by Django, JavaScript, and Bootstrap the entire code base is open source and can be found on <a href="https://github.com/machnine/ReagenTree" class="fw-bold">GitHub</a>.
+          ReagenTree is powered by <i>Django</i>, <i>JavaScript</i>, and <i>Bootstrap</i>, the entire code base is open source and can be found on <a href="https://github.com/machnine/ReagenTree" class="fw-bold">GitHub</a>.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
         </p>
-        <h4 id="user-account">User Account</h4>
-        <h5 id="user-registration">Registration</h5>
+        <h4 class="pt-3" id="user-account">2. User Account</h4>
+        <h5 id="user-registration">2.1. Registration</h5>
         <p>
-          You need to register an account to use ReagenTree. To register an account, click on the <a href="https://reagentree.oxfordgenes.com/register/" class="fw-bold">register link</a> on the login page and fill in the registration form. 
-          The registration form requires you to provide your email address, first name, last name, and password. Follow the instructions on the registration form to complete the registration process. Please note, only OUH email address is accepted.
-          
-          <img src="{% static 'images/userguide/user-registration-form.png' %}" alt="user registration form" width="450">
+          An account is required to use ReagenTree. To register an account, click on the <a href="{% url 'register' %}" class="fw-bold">register link</a> on the login page and fill in the registration form.
+          The registration form requires you to provide your email address, first name, last name, and password.
+          Follow the instructions on the registration form to complete the registration process.
+          Please note, only an OUH email address is accepted. A new user account requires approval from the administrator users.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
         </p>
-        <h5 id="user-login">Login</h5>
+        <center>
+          <img src="{% static 'images/userguide/user-registration-form.png' %}"
+               alt="user registration form"
+               width="450"
+               class="border">
+        </center>
+        <h5 class="pt-4" id="user-login">2.2. Login</h5>
         <p>
-          To login to ReagenTree, click on the <a href="https://reagentree.oxfordgenes.com/login/" class="fw-bold">login link</a> on the home page and enter your email address and password. 
-          If you have forgotten your password, click on the <a href="https://reagentree.oxfordgenes.com/password-reset/" class="fw-bold">forgot password link</a> to reset your password.
-          <img src="{% static 'images/userguide/user-login-form.png' %}" alt="user login form" width="450">
+          To login to ReagenTree, click on the <a href="{% url 'login' %}" class="fw-bold">login link</a> on the home page and enter your email address and password.
+          If you have forgotten your password, contact the administrator users to reset your password.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
         </p>
-        <h5 id="user-logout">Logout</h5>
+        <h5 id="user-logout">2.3. Logout</h5>
         <p>
-          To logout of ReagenTree, click on the <a href="https://reagentree.oxfordgenes.com/logout/" class="fw-bold">logout link</a> on the home page. 
-          You will be logged out of the system and redirected to the login page.
+          User sessions automatically after 15 minutes of inactivity. Any further actions after your session expired will redirect your to the Login page for re-authentication. To logout manually, click on the <b>Logout</b> link under the user menu.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h5 id="account-previleges">2.4. Account previleges</h5>
+        <p>
+          There are two types of users in ReagenTree: <b>regular users</b> and <b>administrators</b>. If you find that you cannot perform certain actions, contact the administrator users to grant you the necessary permissions.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h4 class="pt-3" id="model-concept">3. Model Concepts</h4>
+        <h5>3.1. Item</h5>
+        <p>
+          An item is a generic term used to describe a reagent, a stock, or any other item that can be stored in a laboratory. An item has a name, a category, and a location.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h5>3.2. Reagent (in-house reagent)</h5>
+        <p>
+          A reagent is a chemical compound used in a laboratory to detect, measure, or produce other substances. A reagent has a name, a category, a location, a company, and a CAS number.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h5>3.3. Stock</h5>
+        <p>
+          A stock is a container that holds a reagent. A stock has a name, a category, a location, a company, a CAS number, and a quantity. A stock can be linked to a reagent.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h4 class="pt-3" id="settings">4. Settings</h4>
+        <h5>4.1. Companies</h5>
+        <p>
+          Companies are entities that produce reagents. Companies have a name and a website. Companies can be linked to reagents and stocks.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a> 
+        </p>
+        <h5>4.2. Categories</h5>
+        <p>
+          Categories are used to classify items. Categories have a name and a description. Categories can be linked to reagents and stocks.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h5>4.3. Locations</h5>
+        <p>
+          Locations are places where items are stored. Locations have a name and a description. Locations can be linked to reagents and stocks.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h5>4.4. Other settings</h5>
+        <p>
+          Other settings include the ability to change your password, view your profile, and view the audit log.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
+        </p>
+        <h4 class="pt-3" id="how-to">5. How to</h4>
+        <h5>5.1. Add a new supplier or manufacturer company</h5>
+        <p>
+          To add a new company, click on the <a href="{% url 'company_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New Company</a> button on the company page and fill in the company form.
+          The company form requires you to provide the company name and website.
+          Follow the instructions on the company form to complete the company creation process.
+          <a href="#userguide-top" title="Back to top" data-bs-toggle="tooltip"><sup><i class="bi bi-chevron-bar-up"></i></sup></a>
         </p>
       </div>
     </div>
