--- a/company/templates/company/company_detail.html
+++ b/company/templates/company/company_detail.html
@@ -17,18 +17,20 @@
 {% endblock panel_actions %}
 {% block panel_content %}
   <div class="row g-2 mb-3 p-3">
-    <div class="col-4 col-lg-2 text-muted">Name:</div>
-    <div class="col-8 col-lg-4">{{ company.name }}</div>
-    <div class="col-4 col-lg-2 text-muted">Description:</div>
-    <div class="col-8 col-lg-4">{{ company.description }}</div>
-    <div class="col-4 col-lg-2 text-muted">Website:</div>
+    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-telephone"></i> Phone:</div>
     <div class="col-8 col-lg-4">
-      <i class="bi bi-link-45deg"></i><a href="{{ company.website }}" target="_blank" title="company website">{{ company.website|truncatechars:30 }}</a>
+       {{ company.phone }}
     </div>
-    <div class="col-4 col-lg-2 text-muted">Phone:</div>
+    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-envelope"></i> Email:</div>
     <div class="col-8 col-lg-4">
-      <i class="bi bi-phone"></i> {{ company.phone }}
+       {{ company.email }}
     </div>
+    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-globe"></i> Website:</div>
+    <div class="col-8 col-lg-10">
+      <a href="{{ company.website }}" target="_blank" title="company website"> {{ company.website|truncatechars:30 }}</a>
+    </div>
+    <div class="col-4 col-lg-2 text-muted"><i class="bi bi-journal"></i> Description:</div>
+    <div class="col-8 col-lg-10">{{ company.description }}</div>    
   </div>
   {# manufactured_items #}
   {% if company.manufactured_items.count > 0 %}
