user guide loginrequired

--- a/templates/partials/navbar_menu_start.html
+++ b/templates/partials/navbar_menu_start.html
@@ -12,7 +12,7 @@
         <a href="{% url 'stock_create' %}" class="dropdown-item"><i class="bi bi-box-seam-fill stock-text-color"></i> New stock</a>
       </li>
       <li>
-        <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes stock-text-color"></i> All stock items</a>
+        <a href="{% url 'stock_list' %}" class="dropdown-item"><i class="bi bi-boxes stock-text-color"></i> All stocks</a>
       </li>
       <li>
         <a href="{% url 'stock_validation_list' %}" class="dropdown-item"><i class="bi bi-clipboard validation-text-color"></i> For validation</a>
@@ -32,7 +32,7 @@
         <span class="item-text-color">Commercial Reagents</span>
       </li>
       <li>
-        <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> New items</a>
+        <a href="{% url 'item_create' %}" class="dropdown-item"><i class="bi bi-box2-fill item-text-color"></i> New item</a>
       </li>
       <li>
         <a href="{% url 'item_list' %}" class="dropdown-item"><i class="bi bi-boxes item-text-color"></i> All items</a>
@@ -42,7 +42,7 @@
         <span class="inhouse-text-color">Inhouse Reagents</span>
       </li>
       <li>
-        <a href="{% url 'inhouse_create' %}" class="dropdown-item"><i class="bi bi-box-fill inhouse-text-color"></i> New reagents</a>
+        <a href="{% url 'inhouse_create' %}" class="dropdown-item"><i class="bi bi-box-fill inhouse-text-color"></i> New reagent</a>
       </li>
       <li>
         <a href="{% url 'inhouse_list' %}" class="dropdown-item"><i class="bi bi-bounding-box inhouse-text-color"></i> All reagents</a>
