--- a/location/templates/location/location_form.html
+++ b/location/templates/location/location_form.html
@@ -1,17 +1,23 @@
-<div class="px-3 pt-3">
-  <div class="input-group mb-3">
-    <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
-    {{ form.name }}
+{% extends "object_form_base.html" %}
+{% block panel_title_icon %}
+  <i class="bi bi-geo-alt-fill location-text-color"></i>
+{% endblock panel_title_icon %}
+{% block object_form %}
+  <div class="px-3 pt-3">
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
+      {{ form.name }}
+    </div>
+    <span class="text-danger">{{ form.name.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.room.label_tag }}</span>
+      {{ form.room }}
+    </div>
+    <span class="text-danger">{{ form.room.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
+      {{ form.description }}
+    </div>
+    <span class="text-danger">{{ form.description.errors }}</span>
   </div>
-  <span class="text-danger">{{ form.name.errors }}</span>
-  <div class="input-group mb-3">
-    <span class="input-group-text input-group-text-fw-sm">{{ form.room.label_tag }}</span>
-    {{ form.room }}
-  </div>
-  <span class="text-danger">{{ form.room.errors }}</span>
-  <div class="input-group mb-3">
-    <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
-    {{ form.description }}
-  </div>
-  <span class="text-danger">{{ form.description.errors }}</span>
-</div>
+{% endblock object_form %}
