--- a/item/templates/stock/stock_entry_update.html
+++ b/item/templates/stock/stock_entry_update.html
@@ -1,7 +1,7 @@
 {% extends "object_update_base.html" %}
 {% load stock_tags %}
 {% block title %}
-  Stock
+  Stock Entry
 {% endblock title %}
 {% block panel_title %}
   <span class="fs-5 icon-with-text">
