--- a/item/templates/stock/stock_update.html
+++ b/item/templates/stock/stock_update.html
@@ -1,11 +1,8 @@
-{% extends "object_update_base.html" %}
-{% block title %}
-  Stock
-{% endblock title %}
-{% block panel_title %}
-  <i class="bi bi-box-seam-fill stock-text-color"></i> Update Stock
-{% endblock panel_title %}
-{% block update_form %}
+{% extends "object_form_base.html" %}
+{% block panel_title_icon %}
+  <i class="bi bi-box-seam-fill stock-text-color"></i>
+{% endblock panel_title_icon %}
+{% block object_form %}
   <div class="px-3 pt-3">
     <span class="text-danger">{{ form.non_field_errors }}</span>
     <div class="input-group mb-3">
@@ -41,4 +38,4 @@
     </div>
     <span class="text-danger">{{ form.comments.errors }}</span>
   </div>
-{% endblock update_form %}
+{% endblock object_form %}
